Fix overflow issue with LargeLookCard colors display on smaller screen sizes.

--- a/components/cards/cards.module.css
+++ b/components/cards/cards.module.css
@@ -164,13 +164,24 @@
 
 .colors {
     display: flex;
-    gap: 12px;
+    flex-wrap: wrap;
+    column-gap: 12px;
+    row-gap: 6px;
     margin-block: 6px;
+    width: 100%;
 }
 
 .colors img {
-    width: 36px;
-    height: 20px;
+    width: 24px;
+    height: 12px;
     object-fit: cover;
     border-radius: 4px;
+    flex-shrink: 1;
+}
+
+@media screen and (min-width: 1025px) {
+    .colors img {
+        width: 36px;
+        height: 20px;
+    }
 }
